cmake_minimum_required(VERSION 3.19)
project(MyTest)

set(CMAKE_CXX_STANDARD 20)

add_executable(MyTest main.cpp)

add_executable(charTest charTest.cpp)
add_executable(escapeTest escapeTest.cpp)
add_executable(stringTest stringTest.cpp)
add_executable(boolTest boolTest.cpp)
add_executable(cinTest cinTest.cpp)
add_executable(operationTest operationTest.cpp)
add_executable(assignmentTest assignmentTest.cpp)
add_executable(compareTest compareTest.cpp)
add_executable(logicTest logicTest.cpp)
add_executable(chooseTest chooseTest.cpp)
add_executable(pigTest pigTest.cpp)
add_executable(ternaryOperationTest ternaryOperationTest.cpp)

add_executable(switchTest switchTest.cpp)
add_executable(whileTest whileTest.cpp)
add_executable(doWhileTest doWhileTest.cpp)
add_executable(daffodilsTest daffodilsTest.cpp)
add_executable(forTest forTest.cpp)
add_executable(breakTest breakTest.cpp)
add_executable(gotoTest gotoTest.cpp)
add_executable(arrayTest arrayTest.cpp)
add_executable(bubbleSortTest bubbleSortTest.cpp)
add_executable(twoArrayTest twoArrayTest.cpp)
add_executable(functionTest functionTest.cpp)
add_executable(FunctionDeclarationTest FunctionDeclarationTest.cpp)
add_executable(FenWenJian FenWenJian.cpp)
add_executable(PointerTest PointerTest.cpp)
add_executable(NullPointTest NullPointTest.cpp)
add_executable(ConstPointTest ConstPointTest.cpp)
add_executable(AandPTest AandPTest.cpp StructTest.cpp StructTest.h StructArrayTest.cpp StructPointTest.cpp StructPointTest.h StructAndStructTest.cpp StructAndStructTest.h StructParamTest.cpp StructParamTest.h StructConstTest.cpp StructConstTest.h TeacherAndStudentTest.cpp HeroTest.cpp HeroTest.h GlobalTest.cpp GlobalTest.h StackTest.cpp StackTest.h HeapTest.cpp HeapTest.h NewTest.cpp NewTest.h ReferenceReturnTest.cpp ReferenceReturnTest.h ReferenceConstTest.cpp ReferenceConstTest.h FunctionParamTest.cpp FunctionParamTest.h FunctionPlaceholderTest.cpp FunctionPlaceholderTest.h FunctionHeavyLoadTest.cpp FunctionHeavyLoadTest.h EncapsulationTest.cpp EncapsulationTest.h StructAndClassTest.cpp PrivateAttributeTest.cpp PrivateAttributeTest.h CubeTest.cpp CubeTest.h StructureAndDestructorTest.cpp StructureAndDestructorTest.h)
add_executable(FandPTest FandPTest.cpp)
add_executable(FandAandPTest FandAandPTest.cpp)
add_executable(StructArrayTest StructArrayTest.cpp)
add_executable(TeacherAndStudentTest TeacherAndStudentTest.cpp)
add_executable(ReferenceTest ReferenceTest.cpp)

add_executable(StructAndClassTest StructAndClassTest.cpp)
add_executable(StructureAndDestructorTest StructureAndDestructorTest.cpp)
add_executable(StructureTest StructureTest.cpp)
add_executable(CopyFunctionTest CopyFunctionTest.cpp)
add_executable(ConstructorTest ConstructorTest.cpp)
add_executable(DeepAndShallowTest DeepAndShallowTest.cpp)
add_executable(LieBiaoTest LieBiaoTest.cpp)

add_executable(ClassObjectTest ClassObjectTest.cpp)
add_executable(StaticMemberTest StaticMemberTest.cpp)
add_executable(StaticFunctionTest StaticFunctionTest.cpp)